tests/ui/compile-fail/init/field_value_wrong_type.stderr
error[E0308]: mismatched types
 --> tests/ui/compile-fail/init/field_value_wrong_type.rs:8:28
  |
8 |     let _ = init!(Foo { a: () });
  |             ---------------^^---
  |             |              |
  |             |              expected `usize`, found `()`
  |             arguments to this method are incorrect
  |
help: the return type of this call is `()` due to the type of the argument passed
 --> tests/ui/compile-fail/init/field_value_wrong_type.rs:8:13
  |
8 |     let _ = init!(Foo { a: () });
  |             ^^^^^^^^^^^^^^^--^^^
  |                            |
  |                            this argument influences the return type of `write`
note: method defined here
 --> src/__internal.rs
  |
  |     pub fn write(self, value: T) -> DropGuard<P, T>
  |            ^^^^^
  = note: this error originates in the macro `init` (in Nightly builds, run with -Z macro-backtrace for more info)
